fixes for table4b 2018 data, active tabs scss

--- a/src/scss/parts/_secondary-nav.scss
+++ b/src/scss/parts/_secondary-nav.scss
@@ -21,7 +21,7 @@
 			width: 100%;
 		}
         &:last-of-type { margin-right: 0; }
-        &.active {
+        &.router-link-active {
             // background-color: var(--clr-pisa-06);
             color: var(--clr-neutral);
 			font-weight: 600;
@@ -45,8 +45,9 @@
 				cursor: pointer;
 				transition: opacity 1s ease-in-out;
 			}
-           
-		}
+			&.router-link-active {font-weight: 600; color: var(--clr-neutral); }
+		} 
+		
 		// span.temp-disable {
 		// 	color: #000000;
 		// 	display: block;
@@ -65,13 +66,13 @@
 		// 	}
 		// }
 	} 
-	&.mathematics li.active {
+	&.mathematics li a.router-link-active {
 		background-color: var(--clr-pisa-01);
 	}
-	&.reading li.active {
+	&.reading li a.router-link-active {
 		background-color: var(--clr-pisa-05);
 	}
-	&.science li.active {
+	&.science li a.router-link-active {
 		background-color: var(--clr-pisa-06);
 	}
 }
